[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-cognee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cognee",
    "langchain",
    "langchain_openai",
    "langgraph",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["langgraph_cognee*"]
exclude = ["notebooks*", "examples*"]
