[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-cognee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cognee",
    "grandalf>=0.8",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "langchain",
    "langchain-community>=0.3.29",
    "langchain_openai",
    "langgraph",
    "mediawikiapi>=1.3",
    "python-dotenv",
    "wikibase-rest-api-client>=0.2.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["langgraph_cognee*"]
exclude = ["notebooks*", "examples*"]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
