[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognee-integration-langgraph"
version = "0.1.1"
description = "A powerful integration between LangGraph and Cognee providing intelligent knowledge management and retrieval capabilities for AI agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Cognee team"}
]
dependencies = [
    "cognee>=0.2.4,<0.3.4",
    "grandalf>=0.8",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "langchain",
    "langchain-community>=0.3.29",
    "langchain_openai",
    "langgraph",
    "mediawikiapi>=1.3",
    "python-dotenv",
    "wikibase-rest-api-client>=0.2.5",
]

[project.urls]
"Homepage" = "https://github.com/topoteretes/cognee-integration-langgraph"
"Repository" = "https://github.com/topoteretes/cognee-integration-langgraph"
"Documentation" = "https://github.com/topoteretes/cognee-integration-langgraph#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["cognee_integration_langgraph*"]
exclude = ["notebooks*", "examples*"]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
